--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 .hidden {
   display: none;
 }
+
 img {
   position: absolute;
   top: 0;
@@ -8,5 +9,41 @@ img {
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: 0.5;
+  object-position: none;
+}
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 150px;
+}
+header {
+  background-color: rgba(0, 0, 0, 0.1);
+  color: #eae0e2;
+  font-size: 80px;
+  font-family: "Luxurious Roman", cursive;
+}
+label {
+  margin-top: 400px;
+  background-color: rgba(0, 0, 0, 0);
+  color: #eae0e2;
+  font-size: 50px;
+  font-family: "Luxurious Roman", cursive;
+}
+
+.login-form input {
+  color: #eae0e2;
+  font-size: larger;
+  border: none;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0);
+  width: 400px;
+  height: 30px;
+  text-align: center;
+  margin-top: 50px;
+  transition: 3s ease-in-out;
+}
+.login-form input:focus {
+  border-bottom: 3px solid #eae0e2;
 }
